LITT Changelog:
===============
 * 2019-09-20: Uses comma operator instead of " JOIN " for joining tables in hard-coded queries to save space. Tighten up titleStory query.
 * 2019-09-20: Made DWL columnInfo a bit more readable.
 * 2019-09-20: Clean up defines for columnInfos. Use more macros to check syntax, no need to undef. Factored out DR.
 * 2019-09-20: Replaced calcMaxWidth goto-loop in addBook with slightly less tricky for-loop.
 * 2019-09-20: Tigthen up runOutputQuery, executeUserSql and executeSql.
 * 2019-09-19: Can now pass r-value queries to runOutputQuery! ;)
 * 2019-09-19: Reduced line count, got rid of unneeded mutable:s and consts. Added const for OutputQuery.
 * 2019-09-19: Minimize main.
 * 2019-09-19: Removed braces for confirm-ifs and list actions.
 * 2019-09-19: Added checkExists, selectSingleValue => selectValue, selectRowValues => selectRows, selectRowIdValues => selectIds, userSql => sql.
 * 2019-09-19: Removed commented out extra code for actionHash.
 * 2019-09-19: Allow inputting NULL values for ISBN values. (Just enter NULL).
 * 2019-09-19: Inline addActionWhereCondition overload for argIndex, only used once.
 * 2019-09-19: Inline addCountCondToHavingCondition, only called once. Also changed OR to AND.
 * 2019-09-19: Tighten up getDrArg.
 * 2019-09-19: Tighten up getWhereCondition.
 * 2019-09-18: Inline addDistinct and showDefaultColumns, only called once.
 * 2019-09-18: Simplified justification. Improved it for execute.
 * 2019-09-18: Simplified OutputQuery usage and made it more logical.
 * 2019-09-17: Optimize by Size instead of speed.
 * 2019-09-17: Simplify reset methods.
 * 2019-09-17: Factored out eIDARGI, renamed selTitle to selBook for needed naming consistency.
 * 2019-09-17: Added "add-l" action. Simplified executeSimpleAddAction and executeInsert.
 * 2019-09-17: Further simplified selectRowValues and dependent functions.
 * 2019-09-16: Added series virtual columns "sg" and "spg", renamed "sep" to "sp".